Final_compiler/y.output
Terminaux inutilisés dans la grammaire

    tTRUE
    tFALSE


Règles inutiles dans l'analyseur à cause de conflits

    3 Functions: %empty


État 0 conflits: 1 décalage/réduction
État 6 conflits: 1 décalage/réduction
État 78 conflits: 1 décalage/réduction
État 94 conflits: 1 réduction/réduction


Grammaire

    0 $accept: program $end

    1 program: Functions Main

    2 Functions: Function Functions
    3          | %empty

    4 $@1: %empty

    5 Function: tVOID tID tLPAR $@1 tRPAR tLBRACE Instructions tRBRACE
    6         | tINT tID tLPAR DecArg tRPAR tLBRACE Instructions ReturnFinal tSEMI tRBRACE
    7         | intDeclaration tSEMI
    8         | ConstDeclaration tSEMI

    9 Main: tVOID tMAIN tLPAR tRPAR tLBRACE Instructions tRBRACE

   10 DecArg: %empty
   11       | tVOID
   12       | intArg

   13 FunctionCall: tID tLPAR Parametre tRPAR tSEMI

   14 intArg: tINT tID
   15       | tINT tID tCOMMA intArg

   16 Instructions: %empty
   17             | Instruction Instructions

   18 Instruction: intDeclaration tSEMI
   19            | ConstDeclaration tSEMI
   20            | tID tASSIGN Operand tSEMI
   21            | tPRINT tLPAR PrintOperand tRPAR tSEMI

   22 $@2: %empty

   23 $@3: %empty

   24 Instruction: tWHILE tLPAR $@2 Condition tRPAR $@3 tLBRACE Instructions tRBRACE

   25 $@4: %empty

   26 $@5: %empty

   27 Instruction: tIF tLPAR Condition tRPAR $@4 tLBRACE Instructions tRBRACE $@5 NextStatement
   28            | FunctionCall tSEMI

   29 PrintOperand: tID
   30             | Operand

   31 $@6: %empty

   32 $@7: %empty

   33 NextStatement: tELSE $@6 tLBRACE Instructions $@7 tRBRACE
   34              | %empty

   35 intDeclaration: tINT intDeclarationList

   36 intDeclarationList: tID

   37 $@8: %empty

   38 intDeclarationList: tID tASSIGN $@8 Operand
   39                   | intDeclarationList tCOMMA intDeclarationList

   40 ConstDeclaration: tCONST tINT constDeclarationList

   41 constDeclarationList: tID

   42 $@9: %empty

   43 constDeclarationList: tID tASSIGN $@9 Operand
   44                     | constDeclarationList tCOMMA intDeclarationList

   45 Operand: tID
   46        | tNB
   47        | Operand tADD Operand
   48        | Operand tSUB Operand
   49        | Operand tMUL Operand
   50        | Operand tDIV Operand
   51        | tID tLPAR Parametre tRPAR
   52        | tID tLPAR tRPAR
   53        | FunctionCall

   54 Condition: Operand CompOp Operand

   55 $@10: %empty

   56 Condition: Operand CompOp Operand $@10 LogicOp Condition
   57          | tNOT tLPAR Condition tRPAR
   58          | Operand

   59 CompOp: tLE
   60       | tGE
   61       | tLT
   62       | tGT
   63       | tEQ
   64       | tNE

   65 LogicOp: tAND
   66        | tOR

   67 Parametre: Operand
   68          | Operand tCOMMA Parametre

   69 ReturnFinal: tRETURN Operand
   70            | tRETURN


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tPRINT (258) 21
    tRETURN (259) 69 70
    tINT (260) 6 14 15 35 40
    tVOID (261) 5 9 11
    tMAIN (262) 9
    tCONST (263) 40
    tADD (264) 47
    tSUB (265) 48
    tDIV (266) 50
    tMUL (267) 49
    tLT (268) 61
    tGT (269) 62
    tNE (270) 64
    tEQ (271) 63
    tLE (272) 59
    tGE (273) 60
    tASSIGN (274) 20 38 43
    tLBRACE (275) 5 6 9 24 27 33
    tLPAR (276) 5 6 9 13 21 24 27 51 52 57
    tRBRACE (277) 5 6 9 24 27 33
    tRPAR (278) 5 6 9 13 21 24 27 51 52 57
    tSEMI (279) 6 7 8 13 18 19 20 21 28
    tCOMMA (280) 15 39 44 68
    tTRUE (281)
    tFALSE (282)
    tID <name> (283) 5 6 13 14 15 20 29 36 38 41 43 45 51 52
    tNB <nb> (284) 46
    tIF <nb> (285) 27
    tELSE <nb> (286) 33
    tWHILE <nb> (287) 24
    tOR (288) 66
    tAND (289) 65
    tNOT (290) 57


Non-terminaux, suivis des règles où ils apparaissent

    $accept (36)
        à gauche: 0
    program (37)
        à gauche: 1
        à droite: 0
    Functions (38)
        à gauche: 2 3
        à droite: 1 2
    Function (39)
        à gauche: 5 6 7 8
        à droite: 2
    $@1 (40)
        à gauche: 4
        à droite: 5
    Main (41)
        à gauche: 9
        à droite: 1
    DecArg (42)
        à gauche: 10 11 12
        à droite: 6
    FunctionCall (43)
        à gauche: 13
        à droite: 28 53
    intArg (44)
        à gauche: 14 15
        à droite: 12 15
    Instructions (45)
        à gauche: 16 17
        à droite: 5 6 9 17 24 27 33
    Instruction (46)
        à gauche: 18 19 20 21 24 27 28
        à droite: 17
    $@2 (47)
        à gauche: 22
        à droite: 24
    $@3 (48)
        à gauche: 23
        à droite: 24
    $@4 (49)
        à gauche: 25
        à droite: 27
    $@5 (50)
        à gauche: 26
        à droite: 27
    PrintOperand (51)
        à gauche: 29 30
        à droite: 21
    NextStatement <nb> (52)
        à gauche: 33 34
        à droite: 27
    $@6 (53)
        à gauche: 31
        à droite: 33
    $@7 (54)
        à gauche: 32
        à droite: 33
    intDeclaration (55)
        à gauche: 35
        à droite: 7 18
    intDeclarationList (56)
        à gauche: 36 38 39
        à droite: 35 39 44
    $@8 (57)
        à gauche: 37
        à droite: 38
    ConstDeclaration (58)
        à gauche: 40
        à droite: 8 19
    constDeclarationList (59)
        à gauche: 41 43 44
        à droite: 40 44
    $@9 (60)
        à gauche: 42
        à droite: 43
    Operand <nb> (61)
        à gauche: 45 46 47 48 49 50 51 52 53
        à droite: 20 30 38 43 47 48 49 50 54 56 58 67 68 69
    Condition (62)
        à gauche: 54 56 57 58
        à droite: 24 27 56 57
    $@10 (63)
        à gauche: 55
        à droite: 56
    CompOp <name> (64)
        à gauche: 59 60 61 62 63 64
        à droite: 54 56
    LogicOp <name> (65)
        à gauche: 65 66
        à droite: 56
    Parametre (66)
        à gauche: 67 68
        à droite: 13 51 68
    ReturnFinal (67)
        à gauche: 69 70
        à droite: 6


État 0

    0 $accept: . program $end

    tINT    décalage et aller à l'état 1
    tVOID   décalage et aller à l'état 2
    tCONST  décalage et aller à l'état 3

    tVOID  [réduction par utilisation de la règle 3 (Functions)]

    program           aller à l'état 4
    Functions         aller à l'état 5
    Function          aller à l'état 6
    intDeclaration    aller à l'état 7
    ConstDeclaration  aller à l'état 8


État 1

    6 Function: tINT . tID tLPAR DecArg tRPAR tLBRACE Instructions ReturnFinal tSEMI tRBRACE
   35 intDeclaration: tINT . intDeclarationList

    tID  décalage et aller à l'état 9

    intDeclarationList  aller à l'état 10


État 2

    5 Function: tVOID . tID tLPAR $@1 tRPAR tLBRACE Instructions tRBRACE

    tID  décalage et aller à l'état 11


État 3

   40 ConstDeclaration: tCONST . tINT constDeclarationList

    tINT  décalage et aller à l'état 12


État 4

    0 $accept: program . $end

    $end  décalage et aller à l'état 13


État 5

    1 program: Functions . Main

    tVOID  décalage et aller à l'état 14

    Main  aller à l'état 15


État 6

    2 Functions: Function . Functions

    tINT    décalage et aller à l'état 1
    tVOID   décalage et aller à l'état 2
    tCONST  décalage et aller à l'état 3

    tVOID  [réduction par utilisation de la règle 3 (Functions)]

    Functions         aller à l'état 16
    Function          aller à l'état 6
    intDeclaration    aller à l'état 7
    ConstDeclaration  aller à l'état 8


État 7

    7 Function: intDeclaration . tSEMI

    tSEMI  décalage et aller à l'état 17


État 8

    8 Function: ConstDeclaration . tSEMI

    tSEMI  décalage et aller à l'état 18


État 9

    6 Function: tINT tID . tLPAR DecArg tRPAR tLBRACE Instructions ReturnFinal tSEMI tRBRACE
   36 intDeclarationList: tID .
   38                   | tID . tASSIGN $@8 Operand

    tASSIGN  décalage et aller à l'état 19
    tLPAR    décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 36 (intDeclarationList)


État 10

   35 intDeclaration: tINT intDeclarationList .
   39 intDeclarationList: intDeclarationList . tCOMMA intDeclarationList

    tCOMMA  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 35 (intDeclaration)


État 11

    5 Function: tVOID tID . tLPAR $@1 tRPAR tLBRACE Instructions tRBRACE

    tLPAR  décalage et aller à l'état 22


État 12

   40 ConstDeclaration: tCONST tINT . constDeclarationList

    tID  décalage et aller à l'état 23

    constDeclarationList  aller à l'état 24


État 13

    0 $accept: program $end .

    $défaut  accepter


État 14

    9 Main: tVOID . tMAIN tLPAR tRPAR tLBRACE Instructions tRBRACE

    tMAIN  décalage et aller à l'état 25


État 15

    1 program: Functions Main .

    $défaut  réduction par utilisation de la règle 1 (program)


État 16

    2 Functions: Function Functions .

    $défaut  réduction par utilisation de la règle 2 (Functions)


État 17

    7 Function: intDeclaration tSEMI .

    $défaut  réduction par utilisation de la règle 7 (Function)


État 18

    8 Function: ConstDeclaration tSEMI .

    $défaut  réduction par utilisation de la règle 8 (Function)


État 19

   38 intDeclarationList: tID tASSIGN . $@8 Operand

    $défaut  réduction par utilisation de la règle 37 ($@8)

    $@8  aller à l'état 26


État 20

    6 Function: tINT tID tLPAR . DecArg tRPAR tLBRACE Instructions ReturnFinal tSEMI tRBRACE

    tINT   décalage et aller à l'état 27
    tVOID  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 10 (DecArg)

    DecArg  aller à l'état 29
    intArg  aller à l'état 30


État 21

   39 intDeclarationList: intDeclarationList tCOMMA . intDeclarationList

    tID  décalage et aller à l'état 31

    intDeclarationList  aller à l'état 32


État 22

    5 Function: tVOID tID tLPAR . $@1 tRPAR tLBRACE Instructions tRBRACE

    $défaut  réduction par utilisation de la règle 4 ($@1)

    $@1  aller à l'état 33


État 23

   41 constDeclarationList: tID .
   43                     | tID . tASSIGN $@9 Operand

    tASSIGN  décalage et aller à l'état 34

    $défaut  réduction par utilisation de la règle 41 (constDeclarationList)


État 24

   40 ConstDeclaration: tCONST tINT constDeclarationList .
   44 constDeclarationList: constDeclarationList . tCOMMA intDeclarationList

    tCOMMA  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 40 (ConstDeclaration)


État 25

    9 Main: tVOID tMAIN . tLPAR tRPAR tLBRACE Instructions tRBRACE

    tLPAR  décalage et aller à l'état 36


État 26

   38 intDeclarationList: tID tASSIGN $@8 . Operand

    tID  décalage et aller à l'état 37
    tNB  décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 40


État 27

   14 intArg: tINT . tID
   15       | tINT . tID tCOMMA intArg

    tID  décalage et aller à l'état 41


État 28

   11 DecArg: tVOID .

    $défaut  réduction par utilisation de la règle 11 (DecArg)


État 29

    6 Function: tINT tID tLPAR DecArg . tRPAR tLBRACE Instructions ReturnFinal tSEMI tRBRACE

    tRPAR  décalage et aller à l'état 42


État 30

   12 DecArg: intArg .

    $défaut  réduction par utilisation de la règle 12 (DecArg)


État 31

   36 intDeclarationList: tID .
   38                   | tID . tASSIGN $@8 Operand

    tASSIGN  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 36 (intDeclarationList)


État 32

   39 intDeclarationList: intDeclarationList . tCOMMA intDeclarationList
   39                   | intDeclarationList tCOMMA intDeclarationList .

    $défaut  réduction par utilisation de la règle 39 (intDeclarationList)


État 33

    5 Function: tVOID tID tLPAR $@1 . tRPAR tLBRACE Instructions tRBRACE

    tRPAR  décalage et aller à l'état 43


État 34

   43 constDeclarationList: tID tASSIGN . $@9 Operand

    $défaut  réduction par utilisation de la règle 42 ($@9)

    $@9  aller à l'état 44


État 35

   44 constDeclarationList: constDeclarationList tCOMMA . intDeclarationList

    tID  décalage et aller à l'état 31

    intDeclarationList  aller à l'état 45


État 36

    9 Main: tVOID tMAIN tLPAR . tRPAR tLBRACE Instructions tRBRACE

    tRPAR  décalage et aller à l'état 46


État 37

   13 FunctionCall: tID . tLPAR Parametre tRPAR tSEMI
   45 Operand: tID .
   51        | tID . tLPAR Parametre tRPAR
   52        | tID . tLPAR tRPAR

    tLPAR  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 45 (Operand)


État 38

   46 Operand: tNB .

    $défaut  réduction par utilisation de la règle 46 (Operand)


État 39

   53 Operand: FunctionCall .

    $défaut  réduction par utilisation de la règle 53 (Operand)


État 40

   38 intDeclarationList: tID tASSIGN $@8 Operand .
   47 Operand: Operand . tADD Operand
   48        | Operand . tSUB Operand
   49        | Operand . tMUL Operand
   50        | Operand . tDIV Operand

    tADD  décalage et aller à l'état 48
    tSUB  décalage et aller à l'état 49
    tDIV  décalage et aller à l'état 50
    tMUL  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 38 (intDeclarationList)


État 41

   14 intArg: tINT tID .
   15       | tINT tID . tCOMMA intArg

    tCOMMA  décalage et aller à l'état 52

    $défaut  réduction par utilisation de la règle 14 (intArg)


État 42

    6 Function: tINT tID tLPAR DecArg tRPAR . tLBRACE Instructions ReturnFinal tSEMI tRBRACE

    tLBRACE  décalage et aller à l'état 53


État 43

    5 Function: tVOID tID tLPAR $@1 tRPAR . tLBRACE Instructions tRBRACE

    tLBRACE  décalage et aller à l'état 54


État 44

   43 constDeclarationList: tID tASSIGN $@9 . Operand

    tID  décalage et aller à l'état 37
    tNB  décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 55


État 45

   39 intDeclarationList: intDeclarationList . tCOMMA intDeclarationList
   44 constDeclarationList: constDeclarationList tCOMMA intDeclarationList .

    $défaut  réduction par utilisation de la règle 44 (constDeclarationList)


État 46

    9 Main: tVOID tMAIN tLPAR tRPAR . tLBRACE Instructions tRBRACE

    tLBRACE  décalage et aller à l'état 56


État 47

   13 FunctionCall: tID tLPAR . Parametre tRPAR tSEMI
   51 Operand: tID tLPAR . Parametre tRPAR
   52        | tID tLPAR . tRPAR

    tRPAR  décalage et aller à l'état 57
    tID    décalage et aller à l'état 37
    tNB    décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 58
    Parametre     aller à l'état 59


État 48

   47 Operand: Operand tADD . Operand

    tID  décalage et aller à l'état 37
    tNB  décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 60


État 49

   48 Operand: Operand tSUB . Operand

    tID  décalage et aller à l'état 37
    tNB  décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 61


État 50

   50 Operand: Operand tDIV . Operand

    tID  décalage et aller à l'état 37
    tNB  décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 62


État 51

   49 Operand: Operand tMUL . Operand

    tID  décalage et aller à l'état 37
    tNB  décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 63


État 52

   15 intArg: tINT tID tCOMMA . intArg

    tINT  décalage et aller à l'état 27

    intArg  aller à l'état 64


État 53

    6 Function: tINT tID tLPAR DecArg tRPAR tLBRACE . Instructions ReturnFinal tSEMI tRBRACE

    tPRINT  décalage et aller à l'état 65
    tINT    décalage et aller à l'état 66
    tCONST  décalage et aller à l'état 3
    tID     décalage et aller à l'état 67
    tIF     décalage et aller à l'état 68
    tWHILE  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 16 (Instructions)

    FunctionCall      aller à l'état 70
    Instructions      aller à l'état 71
    Instruction       aller à l'état 72
    intDeclaration    aller à l'état 73
    ConstDeclaration  aller à l'état 74


État 54

    5 Function: tVOID tID tLPAR $@1 tRPAR tLBRACE . Instructions tRBRACE

    tPRINT  décalage et aller à l'état 65
    tINT    décalage et aller à l'état 66
    tCONST  décalage et aller à l'état 3
    tID     décalage et aller à l'état 67
    tIF     décalage et aller à l'état 68
    tWHILE  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 16 (Instructions)

    FunctionCall      aller à l'état 70
    Instructions      aller à l'état 75
    Instruction       aller à l'état 72
    intDeclaration    aller à l'état 73
    ConstDeclaration  aller à l'état 74


État 55

   43 constDeclarationList: tID tASSIGN $@9 Operand .
   47 Operand: Operand . tADD Operand
   48        | Operand . tSUB Operand
   49        | Operand . tMUL Operand
   50        | Operand . tDIV Operand

    tADD  décalage et aller à l'état 48
    tSUB  décalage et aller à l'état 49
    tDIV  décalage et aller à l'état 50
    tMUL  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 43 (constDeclarationList)


État 56

    9 Main: tVOID tMAIN tLPAR tRPAR tLBRACE . Instructions tRBRACE

    tPRINT  décalage et aller à l'état 65
    tINT    décalage et aller à l'état 66
    tCONST  décalage et aller à l'état 3
    tID     décalage et aller à l'état 67
    tIF     décalage et aller à l'état 68
    tWHILE  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 16 (Instructions)

    FunctionCall      aller à l'état 70
    Instructions      aller à l'état 76
    Instruction       aller à l'état 72
    intDeclaration    aller à l'état 73
    ConstDeclaration  aller à l'état 74


État 57

   52 Operand: tID tLPAR tRPAR .

    $défaut  réduction par utilisation de la règle 52 (Operand)


État 58

   47 Operand: Operand . tADD Operand
   48        | Operand . tSUB Operand
   49        | Operand . tMUL Operand
   50        | Operand . tDIV Operand
   67 Parametre: Operand .
   68          | Operand . tCOMMA Parametre

    tADD    décalage et aller à l'état 48
    tSUB    décalage et aller à l'état 49
    tDIV    décalage et aller à l'état 50
    tMUL    décalage et aller à l'état 51
    tCOMMA  décalage et aller à l'état 77

    $défaut  réduction par utilisation de la règle 67 (Parametre)


État 59

   13 FunctionCall: tID tLPAR Parametre . tRPAR tSEMI
   51 Operand: tID tLPAR Parametre . tRPAR

    tRPAR  décalage et aller à l'état 78


État 60

   47 Operand: Operand . tADD Operand
   47        | Operand tADD Operand .
   48        | Operand . tSUB Operand
   49        | Operand . tMUL Operand
   50        | Operand . tDIV Operand

    tDIV  décalage et aller à l'état 50
    tMUL  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 47 (Operand)


État 61

   47 Operand: Operand . tADD Operand
   48        | Operand . tSUB Operand
   48        | Operand tSUB Operand .
   49        | Operand . tMUL Operand
   50        | Operand . tDIV Operand

    tDIV  décalage et aller à l'état 50
    tMUL  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 48 (Operand)


État 62

   47 Operand: Operand . tADD Operand
   48        | Operand . tSUB Operand
   49        | Operand . tMUL Operand
   50        | Operand . tDIV Operand
   50        | Operand tDIV Operand .

    $défaut  réduction par utilisation de la règle 50 (Operand)


État 63

   47 Operand: Operand . tADD Operand
   48        | Operand . tSUB Operand
   49        | Operand . tMUL Operand
   49        | Operand tMUL Operand .
   50        | Operand . tDIV Operand

    $défaut  réduction par utilisation de la règle 49 (Operand)


État 64

   15 intArg: tINT tID tCOMMA intArg .

    $défaut  réduction par utilisation de la règle 15 (intArg)


État 65

   21 Instruction: tPRINT . tLPAR PrintOperand tRPAR tSEMI

    tLPAR  décalage et aller à l'état 79


État 66

   35 intDeclaration: tINT . intDeclarationList

    tID  décalage et aller à l'état 31

    intDeclarationList  aller à l'état 10


État 67

   13 FunctionCall: tID . tLPAR Parametre tRPAR tSEMI
   20 Instruction: tID . tASSIGN Operand tSEMI

    tASSIGN  décalage et aller à l'état 80
    tLPAR    décalage et aller à l'état 81


État 68

   27 Instruction: tIF . tLPAR Condition tRPAR $@4 tLBRACE Instructions tRBRACE $@5 NextStatement

    tLPAR  décalage et aller à l'état 82


État 69

   24 Instruction: tWHILE . tLPAR $@2 Condition tRPAR $@3 tLBRACE Instructions tRBRACE

    tLPAR  décalage et aller à l'état 83


État 70

   28 Instruction: FunctionCall . tSEMI

    tSEMI  décalage et aller à l'état 84


État 71

    6 Function: tINT tID tLPAR DecArg tRPAR tLBRACE Instructions . ReturnFinal tSEMI tRBRACE

    tRETURN  décalage et aller à l'état 85

    ReturnFinal  aller à l'état 86


État 72

   17 Instructions: Instruction . Instructions

    tPRINT  décalage et aller à l'état 65
    tINT    décalage et aller à l'état 66
    tCONST  décalage et aller à l'état 3
    tID     décalage et aller à l'état 67
    tIF     décalage et aller à l'état 68
    tWHILE  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 16 (Instructions)

    FunctionCall      aller à l'état 70
    Instructions      aller à l'état 87
    Instruction       aller à l'état 72
    intDeclaration    aller à l'état 73
    ConstDeclaration  aller à l'état 74


État 73

   18 Instruction: intDeclaration . tSEMI

    tSEMI  décalage et aller à l'état 88


État 74

   19 Instruction: ConstDeclaration . tSEMI

    tSEMI  décalage et aller à l'état 89


État 75

    5 Function: tVOID tID tLPAR $@1 tRPAR tLBRACE Instructions . tRBRACE

    tRBRACE  décalage et aller à l'état 90


État 76

    9 Main: tVOID tMAIN tLPAR tRPAR tLBRACE Instructions . tRBRACE

    tRBRACE  décalage et aller à l'état 91


État 77

   68 Parametre: Operand tCOMMA . Parametre

    tID  décalage et aller à l'état 37
    tNB  décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 58
    Parametre     aller à l'état 92


État 78

   13 FunctionCall: tID tLPAR Parametre tRPAR . tSEMI
   51 Operand: tID tLPAR Parametre tRPAR .

    tSEMI  décalage et aller à l'état 93

    tSEMI     [réduction par utilisation de la règle 51 (Operand)]
    $défaut  réduction par utilisation de la règle 51 (Operand)


État 79

   21 Instruction: tPRINT tLPAR . PrintOperand tRPAR tSEMI

    tID  décalage et aller à l'état 94
    tNB  décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    PrintOperand  aller à l'état 95
    Operand       aller à l'état 96


État 80

   20 Instruction: tID tASSIGN . Operand tSEMI

    tID  décalage et aller à l'état 37
    tNB  décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 97


État 81

   13 FunctionCall: tID tLPAR . Parametre tRPAR tSEMI

    tID  décalage et aller à l'état 37
    tNB  décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 58
    Parametre     aller à l'état 98


État 82

   27 Instruction: tIF tLPAR . Condition tRPAR $@4 tLBRACE Instructions tRBRACE $@5 NextStatement

    tID   décalage et aller à l'état 37
    tNB   décalage et aller à l'état 38
    tNOT  décalage et aller à l'état 99

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 100
    Condition     aller à l'état 101


État 83

   24 Instruction: tWHILE tLPAR . $@2 Condition tRPAR $@3 tLBRACE Instructions tRBRACE

    $défaut  réduction par utilisation de la règle 22 ($@2)

    $@2  aller à l'état 102


État 84

   28 Instruction: FunctionCall tSEMI .

    $défaut  réduction par utilisation de la règle 28 (Instruction)


État 85

   69 ReturnFinal: tRETURN . Operand
   70            | tRETURN .

    tID  décalage et aller à l'état 37
    tNB  décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 70 (ReturnFinal)

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 103


État 86

    6 Function: tINT tID tLPAR DecArg tRPAR tLBRACE Instructions ReturnFinal . tSEMI tRBRACE

    tSEMI  décalage et aller à l'état 104


État 87

   17 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 17 (Instructions)


État 88

   18 Instruction: intDeclaration tSEMI .

    $défaut  réduction par utilisation de la règle 18 (Instruction)


État 89

   19 Instruction: ConstDeclaration tSEMI .

    $défaut  réduction par utilisation de la règle 19 (Instruction)


État 90

    5 Function: tVOID tID tLPAR $@1 tRPAR tLBRACE Instructions tRBRACE .

    $défaut  réduction par utilisation de la règle 5 (Function)


État 91

    9 Main: tVOID tMAIN tLPAR tRPAR tLBRACE Instructions tRBRACE .

    $défaut  réduction par utilisation de la règle 9 (Main)


État 92

   68 Parametre: Operand tCOMMA Parametre .

    $défaut  réduction par utilisation de la règle 68 (Parametre)


État 93

   13 FunctionCall: tID tLPAR Parametre tRPAR tSEMI .

    $défaut  réduction par utilisation de la règle 13 (FunctionCall)


État 94

   13 FunctionCall: tID . tLPAR Parametre tRPAR tSEMI
   29 PrintOperand: tID .
   45 Operand: tID .
   51        | tID . tLPAR Parametre tRPAR
   52        | tID . tLPAR tRPAR

    tLPAR  décalage et aller à l'état 47

    tRPAR     réduction par utilisation de la règle 29 (PrintOperand)
    tRPAR     [réduction par utilisation de la règle 45 (Operand)]
    $défaut  réduction par utilisation de la règle 45 (Operand)


État 95

   21 Instruction: tPRINT tLPAR PrintOperand . tRPAR tSEMI

    tRPAR  décalage et aller à l'état 105


État 96

   30 PrintOperand: Operand .
   47 Operand: Operand . tADD Operand
   48        | Operand . tSUB Operand
   49        | Operand . tMUL Operand
   50        | Operand . tDIV Operand

    tADD  décalage et aller à l'état 48
    tSUB  décalage et aller à l'état 49
    tDIV  décalage et aller à l'état 50
    tMUL  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 30 (PrintOperand)


État 97

   20 Instruction: tID tASSIGN Operand . tSEMI
   47 Operand: Operand . tADD Operand
   48        | Operand . tSUB Operand
   49        | Operand . tMUL Operand
   50        | Operand . tDIV Operand

    tADD   décalage et aller à l'état 48
    tSUB   décalage et aller à l'état 49
    tDIV   décalage et aller à l'état 50
    tMUL   décalage et aller à l'état 51
    tSEMI  décalage et aller à l'état 106


État 98

   13 FunctionCall: tID tLPAR Parametre . tRPAR tSEMI

    tRPAR  décalage et aller à l'état 107


État 99

   57 Condition: tNOT . tLPAR Condition tRPAR

    tLPAR  décalage et aller à l'état 108


État 100

   47 Operand: Operand . tADD Operand
   48        | Operand . tSUB Operand
   49        | Operand . tMUL Operand
   50        | Operand . tDIV Operand
   54 Condition: Operand . CompOp Operand
   56          | Operand . CompOp Operand $@10 LogicOp Condition
   58          | Operand .

    tADD  décalage et aller à l'état 48
    tSUB  décalage et aller à l'état 49
    tDIV  décalage et aller à l'état 50
    tMUL  décalage et aller à l'état 51
    tLT   décalage et aller à l'état 109
    tGT   décalage et aller à l'état 110
    tNE   décalage et aller à l'état 111
    tEQ   décalage et aller à l'état 112
    tLE   décalage et aller à l'état 113
    tGE   décalage et aller à l'état 114

    $défaut  réduction par utilisation de la règle 58 (Condition)

    CompOp  aller à l'état 115


État 101

   27 Instruction: tIF tLPAR Condition . tRPAR $@4 tLBRACE Instructions tRBRACE $@5 NextStatement

    tRPAR  décalage et aller à l'état 116


État 102

   24 Instruction: tWHILE tLPAR $@2 . Condition tRPAR $@3 tLBRACE Instructions tRBRACE

    tID   décalage et aller à l'état 37
    tNB   décalage et aller à l'état 38
    tNOT  décalage et aller à l'état 99

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 100
    Condition     aller à l'état 117


État 103

   47 Operand: Operand . tADD Operand
   48        | Operand . tSUB Operand
   49        | Operand . tMUL Operand
   50        | Operand . tDIV Operand
   69 ReturnFinal: tRETURN Operand .

    tADD  décalage et aller à l'état 48
    tSUB  décalage et aller à l'état 49
    tDIV  décalage et aller à l'état 50
    tMUL  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 69 (ReturnFinal)


État 104

    6 Function: tINT tID tLPAR DecArg tRPAR tLBRACE Instructions ReturnFinal tSEMI . tRBRACE

    tRBRACE  décalage et aller à l'état 118


État 105

   21 Instruction: tPRINT tLPAR PrintOperand tRPAR . tSEMI

    tSEMI  décalage et aller à l'état 119


État 106

   20 Instruction: tID tASSIGN Operand tSEMI .

    $défaut  réduction par utilisation de la règle 20 (Instruction)


État 107

   13 FunctionCall: tID tLPAR Parametre tRPAR . tSEMI

    tSEMI  décalage et aller à l'état 93


État 108

   57 Condition: tNOT tLPAR . Condition tRPAR

    tID   décalage et aller à l'état 37
    tNB   décalage et aller à l'état 38
    tNOT  décalage et aller à l'état 99

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 100
    Condition     aller à l'état 120


État 109

   61 CompOp: tLT .

    $défaut  réduction par utilisation de la règle 61 (CompOp)


État 110

   62 CompOp: tGT .

    $défaut  réduction par utilisation de la règle 62 (CompOp)


État 111

   64 CompOp: tNE .

    $défaut  réduction par utilisation de la règle 64 (CompOp)


État 112

   63 CompOp: tEQ .

    $défaut  réduction par utilisation de la règle 63 (CompOp)


État 113

   59 CompOp: tLE .

    $défaut  réduction par utilisation de la règle 59 (CompOp)


État 114

   60 CompOp: tGE .

    $défaut  réduction par utilisation de la règle 60 (CompOp)


État 115

   54 Condition: Operand CompOp . Operand
   56          | Operand CompOp . Operand $@10 LogicOp Condition

    tID  décalage et aller à l'état 37
    tNB  décalage et aller à l'état 38

    FunctionCall  aller à l'état 39
    Operand       aller à l'état 121


État 116

   27 Instruction: tIF tLPAR Condition tRPAR . $@4 tLBRACE Instructions tRBRACE $@5 NextStatement

    $défaut  réduction par utilisation de la règle 25 ($@4)

    $@4  aller à l'état 122


État 117

   24 Instruction: tWHILE tLPAR $@2 Condition . tRPAR $@3 tLBRACE Instructions tRBRACE

    tRPAR  décalage et aller à l'état 123


État 118

    6 Function: tINT tID tLPAR DecArg tRPAR tLBRACE Instructions ReturnFinal tSEMI tRBRACE .

    $défaut  réduction par utilisation de la règle 6 (Function)


État 119

   21 Instruction: tPRINT tLPAR PrintOperand tRPAR tSEMI .

    $défaut  réduction par utilisation de la règle 21 (Instruction)


État 120

   57 Condition: tNOT tLPAR Condition . tRPAR

    tRPAR  décalage et aller à l'état 124


État 121

   47 Operand: Operand . tADD Operand
   48        | Operand . tSUB Operand
   49        | Operand . tMUL Operand
   50        | Operand . tDIV Operand
   54 Condition: Operand CompOp Operand .
   56          | Operand CompOp Operand . $@10 LogicOp Condition
